--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,7 @@
   </head>
   <body>
     <h1>ITwebSA</h1>
-    <img src= "static/banner.jpeg"
-      height='0, auto'>
+    <img src="https://media.istockphoto.com/id/1628553826/photo/ai-or-artificial-intelligence-concept-businessman-using-computer-use-ai-to-help-business-and.webp?s=2048x2048&w=is&k=20&c=OYCON0ru9uVSr-FP-iaJ6S0fWni7DDPlMX4LExBtLHU=" height= '320' width='1500'>
     <h2></h2>
          
     
