--- a/templates/home.html
+++ b/templates/home.html
@@ -2,12 +2,44 @@
 <html>
   <head>
     <title>ITWEBsa</title>
+    <style>
+      h1{
+        font-size: 40px;
+        font-family: Roboto;
+        font-weight: normal;
+        color: rgb(50, 100, 100);
+        text-align: center;   
+       }
+      #banner {
+        width:100%;
+        height:360px;
+        object-fit: cover;
+      }
+      h2{
+        font-family: Roboto;
+        font-size: 32px;
+        color(100, 100, 100);
+        text-align: center;
+      }
+
+      #container {
+        max-width: 1500px;
+        margin: 0 auto;        
+      }
+    </style>
   </head>
   <body>
+    <div id= 'container'>
     <h1>ITwebSA</h1>
-    <img src="https://media.istockphoto.com/id/1628553826/photo/ai-or-artificial-intelligence-concept-businessman-using-computer-use-ai-to-help-business-and.webp?s=2048x2048&w=is&k=20&c=OYCON0ru9uVSr-FP-iaJ6S0fWni7DDPlMX4LExBtLHU=" height= '320' width='1500'>
-    <h2></h2>
+    <img id = 'banner' src="https://media.istockphoto.com/id/1628553826/photo/ai-or-artificial-intelligence-concept-businessman-using-computer-use-ai-to-help-business-and.webp?s=2048x2048&w=is&k=20&c=OYCON0ru9uVSr-FP-iaJ6S0fWni7DDPlMX4LExBtLHU=">
+    <h2>About ITwebSA</h2>
+    <p>
+      Network automation is the process of using software to automate the 
+      management, configuration, testing, and deployment of physical and 
+      virtual devices within a network. It can be used in a variety of 
+      settings, including network virtualization
+    </p>
          
-    
+    </div>
   </body>
 </html>
