--- a/templates/home.html
+++ b/templates/home.html
@@ -2,38 +2,24 @@
 <html>
   <head>
     <title>ITWEBsa</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1{
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(50, 100, 100);
-        text-align: center;   
-       }
       #banner {
-        width:100%;
         height:360px;
+        width:100%;
         object-fit: cover;
       }
-      h2{
-        font-family: Roboto;
-        font-size: 32px;
-        color(100, 100, 100);
-        text-align: center;
-      }
-
-      #container {
-        max-width: 1500px;
-        margin: 0 auto;        
-      }
     </style>
-  </head>
-  <body>
-    <div id= 'container'>
-    <h1>ITwebSA</h1>
-    <img id = 'banner' src="https://media.istockphoto.com/id/1628553826/photo/ai-or-artificial-intelligence-concept-businessman-using-computer-use-ai-to-help-business-and.webp?s=2048x2048&w=is&k=20&c=OYCON0ru9uVSr-FP-iaJ6S0fWni7DDPlMX4LExBtLHU=">
-    <h2>About ITwebSA</h2>
-    <p>
+    </head>
+    
+   <body>
+    <div class='container'>
+    <h1 class="text-center mt-2 mb-4">ITwebSA</h1>
+    <img class="img-fluid" id="banner" src="https://media.istockphoto.com/id/1628553826/photo/ai-or-artificial-intelligence-concept-businessman-using-computer-use-ai-to-help-business-and.webp?s=2048x2048&w=is&k=20&c=OYCON0ru9uVSr-FP-iaJ6S0fWni7DDPlMX4LExBtLHU=">
+    <h2 class="text-center mt-2 mb-6">About ITwebSA</h2>
+    <p class="lead">
       Network automation is the process of using software to automate the 
       management, configuration, testing, and deployment of physical and 
       virtual devices within a network. It can be used in a variety of 
