--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
       virtual devices within a network. It can be used in a variety of 
       settings, including network virtualization
     </p>
-     <h2 class="text-center mt-2 mb-6">Site Technician</h2>
+     <h2 class="text-center mt-2 m-6">Site Technician</h2>
       <div>
         {% for job in jobs %}
           <div>
