--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
     </head>
     
    <body>
+     {% include 'nav.html'%}
     <div class='container'>
     <h1 class="text-center mt-2 mb-4">ITwebSA</h1>
     <img class="img-fluid" id="banner" src="https://media.istockphoto.com/id/1628553826/photo/ai-or-artificial-intelligence-concept-businessman-using-computer-use-ai-to-help-business-and.webp?s=2048x2048&w=is&k=20&c=OYCON0ru9uVSr-FP-iaJ6S0fWni7DDPlMX4LExBtLHU=">
